wrong spacing, now fixed
SRFCMSAL-559

--- a/source/_patterns/20-molecules/people/people.scss
+++ b/source/_patterns/20-molecules/people/people.scss
@@ -108,7 +108,7 @@ $people-margin-horizontal: 8px;
   border-top: 1px solid rgba(0,0,0,0.1);
 
   a {
-    padding-left: 12px;
+    padding-left: 16px;
     padding-right: 42px;
     background-position-x: calc(100% - 11px);
 
